--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "axios": "^1.6.2",
+    "recharts": "^2.15.0",
+    "lucide-react": "^0.468.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
