--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "lucide-react": "^0.468.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "@walletconnect/modal": "^2.6.2",
+    "@walletconnect/sign-client": "^2.11.0",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
