--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "axios": "^1.6.2",
-    "recharts": "^2.15.0",
-    "lucide-react": "^0.468.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
     "@walletconnect/modal": "^2.6.2",
     "@walletconnect/sign-client": "^2.11.0",
-    "qrcode.react": "^3.1.0"
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "hashconnect": "^3.0.14",
+    "lucide-react": "^0.468.0",
+    "next": "16.0.6",
+    "qrcode.react": "^3.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
